@@ -69,9 +69,9 @@
       <version.http.client>4.5</version.http.client>
       <version.org.picketbox>4.0.17.SP2</version.org.picketbox>
       <version.xpp3>1.1.4c</version.xpp3>
-      <version.pax.url>1.3.7</version.pax.url>
-      <version.karaf>2.3.4</version.karaf>
-      <version.pax.exam>4.1.0</version.pax.exam>
+      <version.pax.url>2.5.2</version.pax.url>
+      <version.karaf>4.1.1</version.karaf>
+      <version.pax.exam>4.10.0</version.pax.exam>
       <version.h2.database>1.3.173</version.h2.database>
       <version.resteasy>3.1.0.Final</version.resteasy>
       <version.lucene>5.5.4</version.lucene>
@@ -854,6 +854,7 @@
               java.security: Wildfly, server/integration/*
             -->
             <jigsawForkJvmArgs>
+               -Dsun.reflect.debugModuleAccessChecks=true
                --add-opens=java.base/java.lang=ALL-UNNAMED
                --add-opens=java.base/java.util=ALL-UNNAMED
                --add-opens=java.base/java.io=ALL-UNNAMED
@@ -868,6 +869,13 @@
                --add-opens=java.base/java.text=ALL-UNNAMED
                --add-opens=java.desktop/java.awt.font=ALL-UNNAMED
                --add-opens=java.base/java.security=ALL-UNNAMED
+               --add-exports=jdk.security.jgss/com.sun.security.sasl.gsskerb=ALL-UNNAMED
+               --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+               --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+               --add-exports=java.security.sasl/com.sun.security.sasl.digest=ALL-UNNAMED
+               --add-exports=java.security.sasl/com.sun.security.sasl.ntlm=ALL-UNNAMED
+               --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
+               --add-opens=java.management/javax.management=ALL-UNNAMED
             </jigsawForkJvmArgs>
          </properties>
          <build>
